apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: adguard-home
        image: adguard/adguardhome # {"$imagepolicy": "adguard:adguardhome"}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 53
          name: dns
          protocol: UDP
        - containerPort: 80
          name: web
          protocol: TCP
        volumeMounts:
        - name: adguard-data
          mountPath: /opt/adguardhome/work
        - name: adguard-conf
          mountPath: /opt/adguardhome/conf
      volumes:
      - name: adguard-data
        persistentVolumeClaim:
          claimName: adguard-data-pvc
      - name: adguard-conf
        persistentVolumeClaim:
          claimName: adguard-conf-pvc
      - name: adguard-conf-map
        configMap:
          name: adguard-conf
