apps/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: web
  - protocol: UDP
    port: 53
    targetPort: 53
    name: dns
  type: LoadBalancer
