apps/adguard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard-ingress
spec:
  tls:
  - hosts:
    - adguard.home.southcity.dev
    secretName: adguard-cert
  rules:
  - host: adguard.home.southcity.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard-service
            port:
              name: web
